welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: reassignment to val
		if (a=b && b=c && c=a) {
                     ^